removed /index.html

--- a/tour/index.html
+++ b/tour/index.html
@@ -495,7 +495,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="grid grid-nested">
         <div class="col-3 col-wxxl-6 col-ws-12">
           <ul class="list-nav-inverted">
-            <li class="list-item-header">Overview</li>
             <li class="list-item">
               <a href="/" class="list-item-link">Home</a>
             </li>
@@ -511,7 +510,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </a>
             </li>
             <li class="list-item">
-              <a href="../agencies/index.html" class="list-item-link">Need a Quiz Made?</a>
+              <a href="../agencies" class="list-item-link">Need a Quiz Made?</a>
             </li>
         </div>
 
@@ -519,13 +518,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">Use cases</li>
             <li class="list-item">
-              <a href="../drive-social-traffic/index.html" class='list-item-link'>Drive social traffic</a>
+              <a href="../drive-social-traffic" class='list-item-link'>Drive social traffic</a>
             </li>
             <li class="list-item">
-              <a href="../generate-qualified-leads/index.html" class='list-item-link'>Generate qualified leads</a>
+              <a href="../generate-qualified-leads" class='list-item-link'>Generate qualified leads</a>
             </li>
             <li class="list-item">
-              <a href="../present-targeted-offers/index.html" class='list-item-link'>Present targeted offers</a>
+              <a href="../present-targeted-offers" class='list-item-link'>Present targeted offers</a>
             </li>          
           </ul>
         </div>
@@ -555,13 +554,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <ul class="list-nav-inverted">
             <li class="list-item-header">&copy; 2014 Qzzr</li>
             <li class="list-item">
-              <a href="../terms/index.html" class='list-item-link'>Terms of service</a>
+              <a href="../terms" class='list-item-link'>Terms of service</a>
             </li>
             <li class="list-item">
-              <a href="../privacy/index.html" class='list-item-link'>Privacy policy</a>
+              <a href="../privacy" class='list-item-link'>Privacy policy</a>
             </li>
             <li class="list-item">
-              <a href="../content/index.html" class='list-item-link'>Content Guidelines</a>
+              <a href="../content" class='list-item-link'>Content Guidelines</a>
             </li>
           </ul>
         </div>
