--- a/index.html
+++ b/index.html
@@ -198,133 +198,133 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="https://www.qzzr.com/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/82/b1ce20613111e4a24903302d61a54c/qzzr-todayAvatar.png);">
-                </span>
+                <a class="figure-image" href="/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/82/b1ce20613111e4a24903302d61a54c/qzzr-todayAvatar.png);">
+                </a>
               </span>
-              <span name="user"href="https://www.qzzr.com/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg" class="ellipsis quiz-thumbnail-author">
+              <a name="user"href="/user/todayshow/fi9wcm9maWxlcy8xNTM4Mg" class="ellipsis quiz-thumbnail-author">
                 Today Show
-              </span>
+              </a>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/are-you-snoozing-or-losing/fi9xdWl6emVzLzI1NjMy">
+            <a class="event-card-title hyphenate" href="/quiz/are-you-snoozing-or-losing/fi9xdWl6emVzLzI1NjMy">
               Are you snoozing or losing?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/are-you-snoozing-or-losing/fi9xdWl6emVzLzI1NjMy" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/98/e9c2a06a9711e4bbec8bdacc02147f/today-quiz-141111-031-copy.jpg);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/are-you-snoozing-or-losing/fi9xdWl6emVzLzI1NjMy" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/98/e9c2a06a9711e4bbec8bdacc02147f/today-quiz-141111-031-copy.jpg);">
+          </a>
         </span>
         <!-- second Dorkly Which Nintendo Game Char -->
         <span class="event-card">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="https://www.qzzr.com/quiz/which-nintendo-character-are-you/fi9xdWl6emVzLzIyMzE0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/13/334490e74a11e3a8825fac60bdcea4/D.png);">
-                </span>
+                <a class="figure-image" href="/quiz/which-nintendo-character-are-you/fi9xdWl6emVzLzIyMzE0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/13/334490e74a11e3a8825fac60bdcea4/D.png);">
+                </a>
               </span>
               <span class="ellipsis quiz-thumbnail-author">
                 Dorkly
               </span>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/which-nintendo-character-are-you/fi9xdWl6emVzLzIyMzE0">
+            <a class="event-card-title hyphenate" href="/quiz/which-nintendo-character-are-you/fi9xdWl6emVzLzIyMzE0">
               Which nintendo character are you?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/which-nintendo-character-are-you/fi9xdWl6emVzLzIyMzE0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/f5/499dd046a811e49e9fe3cf68d83da3/tue.jpg);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/which-nintendo-character-are-you/fi9xdWl6emVzLzIyMzE0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/f5/499dd046a811e49e9fe3cf68d83da3/tue.jpg);">
+          </a>
         </span>
         <!-- third car throttle/gear head -->
         <span class="event-card">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="http://www.qzzr.com/user/car-throttle/fi9wcm9maWxlcy82NjM4" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/63/94d9e026f511e4be00c7cf6808cd5e/back.jpg);">
-                </span>
+                <a class="figure-image" href="/user/car-throttle/fi9wcm9maWxlcy82NjM4" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/63/94d9e026f511e4be00c7cf6808cd5e/back.jpg);">
+                </a>
               </span>
               <span class="ellipsis quiz-thumbnail-author">
                 Car Throttle
               </span>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/are-you-a-true-gear-head/fi9xdWl6emVzLzY3Ng">
+            <a class="event-card-title hyphenate" href="/quiz/are-you-a-true-gear-head/fi9xdWl6emVzLzY3Ng">
               Are you a true gear head?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/are-you-a-true-gear-head/fi9xdWl6emVzLzY3Ng" style="background-image: url(https://s3-us-west-2.amazonaws.com/qzzr-production/quiz/676/1390178603_medium.jpg?1390178603);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/are-you-a-true-gear-head/fi9xdWl6emVzLzY3Ng" style="background-image: url(https://s3-us-west-2.amazonaws.com/qzzr-production/quiz/676/1390178603_medium.jpg?1390178603);">
+          </a>
         </span>
         <!-- fourth yahoo/which taylor swift -->
         <span class="event-card is-highlighted">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="https://www.qzzr.com/user/nicoled84/fi9wcm9maWxlcy8xMDI2NA" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-10264.png);">
-                </span>
+                <a class="figure-image" href="/user/nicoled84/fi9wcm9maWxlcy8xMDI2NA" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-10264.png);">
+                </a>
               </span>
               <span class="ellipsis quiz-thumbnail-author">
                  Yahoo
               </span>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/which-taylor-swift-are-you-dd20bdcd-77a8-41d2-9324-5c9fef24bd6c/fi9xdWl6emVzLzI0OTY1">
+            <a class="event-card-title hyphenate" href="/quiz/which-taylor-swift-are-you-dd20bdcd-77a8-41d2-9324-5c9fef24bd6c/fi9xdWl6emVzLzI0OTY1">
               Which Taylor Swift are you?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/which-taylor-swift-are-you-dd20bdcd-77a8-41d2-9324-5c9fef24bd6c/fi9xdWl6emVzLzI0OTY1" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/47/06fb7062da11e48b5fe92ceb7e8323/Screen-Shot-2014-11-02-at-4.50.18-PM.png);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/which-taylor-swift-are-you-dd20bdcd-77a8-41d2-9324-5c9fef24bd6c/fi9xdWl6emVzLzI0OTY1" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/47/06fb7062da11e48b5fe92ceb7e8323/Screen-Shot-2014-11-02-at-4.50.18-PM.png);">
+          </a>
         </span>
         <!-- fifth College Humor/Sci-fi author -->
         <span class="event-card">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="https://www.qzzr.com/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
-                </span>
+                <a class="figure-image" href="/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
+                </a>
               </span>
               <span class="ellipsis quiz-thumbnail-author">
                 College Humor
               </span>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0">
+            <a class="event-card-title hyphenate" href="/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0">
              Sci-Fi author or crazy person?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/5e/422910092d11e491808b11e17df7d4/George-RR-Martin-1930704.jpg);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/5e/422910092d11e491808b11e17df7d4/George-RR-Martin-1930704.jpg);">
+          </a>
         </span>
         <!-- sixth Crosswalk/Which bible figure are you? -->
         <span class="event-card">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="https://www.qzzr.com/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
-                </span>
+                <a class="figure-image" href="/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
+                </a>
               </span>
               <span class="ellipsis quiz-thumbnail-author">
                 Crosswalk.com
               </span>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY">
+            <a class="event-card-title hyphenate" href="/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY">
               Which bible figure are you?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/3d/56afa0cc2e11e3aa7ae798b9853100/last-supper.jpg);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/3d/56afa0cc2e11e3aa7ae798b9853100/last-supper.jpg);">
+          </a>
         </span>
         <!-- seventh KSL/ Can you pass this US Citizenship Test? -->
         <span class="event-card">
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <span class="figure-image" href="https://www.qzzr.com/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
-                </span>
+                <a class="figure-image" href="/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
+                </a>
               </span>
               <span class="ellipsis quiz-thumbnail-author">
                 KSL
               </span>
             </span>
-            <a class="event-card-title hyphenate" href="https://www.qzzr.com/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU">
+            <a class="event-card-title hyphenate" href="/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU">
               Can you pass the US Citizenship?
             </a>
           </span>
-          <span class="event-card-thumbnail" href="https://www.qzzr.com/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/40/def2f0cf1611e3a79f7f080b5dab0d/U.S.-Capital.jpg);">
-          </span>
+          <a class="event-card-thumbnail" href="/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/40/def2f0cf1611e3a79f7f080b5dab0d/U.S.-Capital.jpg);">
+          </a>
         </span>
       </div>
     </section>
