because of where this may live, relative asset urls are problematic

--- a/present-targeted-offers/index.html
+++ b/present-targeted-offers/index.html
@@ -44,7 +44,6 @@
   
   <!-- CSS -->
   <link rel='stylesheet' href='../assets/stylesheets/application.css'>
-  <link rel='stylesheet' href='../assets/stylesheets/jquery.fancybox.css'>
 
   <!-- Fav and Touch Icons -->
   <link href="assets/ico/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
@@ -60,7 +59,7 @@
   <!-- Scripts -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src='../assets/javascripts/modernizr.js'></script>
+  <script src="//pro.qzzr.com/assets/javascripts/modernizr.js"></script>
 
   <!-- Hack for fackbook redirect anchor -->
   <script type="text/javascript">
@@ -439,9 +438,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <a class="modal-close js-close-modal"><i class="icon-ss-delete"></i></a>
 </div>
 
-  <script src='../assets/javascripts/jquery.fancybox.js'></script>
-  <script src='../assets/javascripts/jquery.fitvids.js'></script>
-
+  <script src="//pro.qzzr.com/assets/javascripts/jquery.fancybox.js"></script>
+  <script src="//pro.qzzr.com/assets/javascripts/jquery.fitvids.js"></script>
 
   <!-- Google Analytics -->
   <script>
