--- a/terms/index.html
+++ b/terms/index.html
@@ -59,7 +59,7 @@
   <!-- Scripts -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="//pro.qzzr.com/assets/javascripts/modernizr.js"></script>
+  <script src='../assets/javascripts/modernizr.js'></script>
 
   <!-- Hack for fackbook redirect anchor -->
   <script type="text/javascript">
@@ -515,9 +515,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <a class="modal-close js-close-modal"><i class="icon-ss-delete"></i></a>
 </div>
+  
+  <script src='../assets/javascripts/jquery.fancybox.js'></script>
+  <script src='../assets/javascripts/jquery.fitvids.js'></script>
 
-  <script src="//pro.qzzr.com/assets/javascripts/jquery.fancybox.js"></script>
-  <script src="//pro.qzzr.com/assets/javascripts/jquery.fitvids.js"></script>
 
   <!-- Google Analytics -->
   <script>
