--- a/pricing/index.html
+++ b/pricing/index.html
@@ -216,7 +216,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-        <a href="#" class="button">Get started</a>
+      <a href="http://app.qzzr.com/account/signup" class="button">Get started</a>
     </footer>
   </article> 
 
@@ -224,9 +224,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <article class="box box-pricing box-enterprise">
     <header class="box-header">
       <h3 class="box-header-heading h4">
-        Free plan
+        Pro plan
       </h3>
-      <strong class="b">Free</strong>
+      <strong class="b">299</strong>
       <h6 class="box-header-subheading">Stuff</h6>
     </header>
     <section class="box-body">
@@ -240,7 +240,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-        <a href="#" class="button">Get started</a>
+        <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
     </footer>
   </article> 
 </section>
@@ -249,10 +249,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <article class="box box-pricing box-enterprise">
     <header class="box-header">
       <h3 class="box-header-heading h4">
-        Free plan
+        Enterprise plan
       </h3>
-      <strong class="b">Free</strong>
-      <h6 class="box-header-subheading">Stuff</h6>
+      <strong class="b"></strong>
+      <h6 class="box-header-subheading"></h6>
     </header>
     <section class="box-body">
       <ul>
@@ -265,7 +265,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </ul>
     </section>
     <footer class="box-footer">
-        <a href="#" class="button">Get started</a>
+        <a href="mailto:sales@qzzr.com?subject=Qzzr Enterprise..." class="button"></a>
     </footer>
   </article> 
 </section>
