--- a/pricing/index.html
+++ b/pricing/index.html
@@ -231,13 +231,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </header>
     <section class="box-body">
       <ul>
-        <li class="list-item"><a href="http://blog.qzzr.co/capture-qualified-leads-quiz/"><strong class="b">Unlimited</strong> lead captures <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="You can add a lead form and custom text before or after the results page of your quiz."><i class="icon-ss-info icon"></i></span></a></li>
-        <li class="list-item"><a href="http://blog.qzzr.co/present-targeted-offers-quiz/"><strong class="b">Unlimited</strong> offer click-thrus <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Present an offer at the end of your quiz to send people to another site or page."><i class="icon-ss-info icon"></i></span></a></li>
-        <li class="list-item"><a href="http://www.qzzr.co/track-quiz-scores/"><strong class="b">Unlimited</strong> tracked scores <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Prompt users to log in before taking your quiz so you can see who took it and what they got."><i class="icon-ss-info"></i></span></a></li>
-        <li class="list-item"><a href="http://blog.qzzr.co/create-viral-outcome-based-quizzes/"><strong class="b">Unlimited</strong> social shares<span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Shares via our social media buttons link back to your site."><i class="icon-ss-info icon"></i></span></a></li>
-        <li class="list-item">Reduced branding <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Reduced Qzzr branding in share messages to Facebook, Twitter, and Linkedin."><i class="icon-ss-info icon"></i></span></li>
-        <li class="list-item">Premium support </li>
-      </ul>
+        <li>White Label</li>
+        <li>Multiple accounts</li>
+        <li>VIP support</li>
+        <li>API access</li>
     </section>
     <footer class="box-footer">
         <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
@@ -252,16 +249,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         Enterprise plan
       </h3>
       <strong class="b"></strong>
-      <h6 class="box-header-subheading"></h6>
+      <h6 class="box-header-subheading">Custom quotes</h6>
     </header>
     <section class="box-body">
       <ul>
-        <li class="list-item"><a href="http://blog.qzzr.co/capture-qualified-leads-quiz/"><strong class="b">Unlimited</strong> lead captures <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="You can add a lead form and custom text before or after the results page of your quiz."><i class="icon-ss-info icon"></i></span></a></li>
-        <li class="list-item"><a href="http://blog.qzzr.co/present-targeted-offers-quiz/"><strong class="b">Unlimited</strong> offer click-thrus <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Present an offer at the end of your quiz to send people to another site or page."><i class="icon-ss-info icon"></i></span></a></li>
-        <li class="list-item"><a href="http://www.qzzr.co/track-quiz-scores/"><strong class="b">Unlimited</strong> tracked scores <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Prompt users to log in before taking your quiz so you can see who took it and what they got."><i class="icon-ss-info"></i></span></a></li>
-        <li class="list-item"><a href="http://blog.qzzr.co/create-viral-outcome-based-quizzes/"><strong class="b">Unlimited</strong> social shares<span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Shares via our social media buttons link back to your site."><i class="icon-ss-info icon"></i></span></a></li>
-        <li class="list-item">Reduced branding <span class="ember-view tooltip-top tooltip-long help-icon" data-tooltip="Reduced Qzzr branding in share messages to Facebook, Twitter, and Linkedin."><i class="icon-ss-info icon"></i></span></li>
-        <li class="list-item">Premium support </li>
+        <li>White Label</li>
+        <li>Multiple accounts</li>
+        <li>VIP support</li>
+        <li>API access</li>
       </ul>
     </section>
     <footer class="box-footer">
