--- a/pricing/index.html
+++ b/pricing/index.html
@@ -194,10 +194,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <article class="box box-pricing box-enterprise">
     <header class="box-header">
       <h3 class="box-header-heading h4">
-        Free plan
+        Basic
       </h3>
       <strong class="b">Free</strong>
-      <h6 class="box-header-subheading">Stuff</h6>
+      <h6 class="box-header-subheading">for bloggers, startups, and soccer cousins</h6>
     </header>
     <section class="box-body">
       <ul>
@@ -221,49 +221,57 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </article> 
 
   <section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
-  <article class="box box-pricing box-enterprise">
-    <header class="box-header">
-      <h3 class="box-header-heading h4">
-        Pro plan
-      </h3>
-      <strong class="b">299</strong>
-      <h6 class="box-header-subheading">Stuff</h6>
-    </header>
-    <section class="box-body">
-      <ul>
-        <li>White Label</li>
-        <li>Multiple accounts</li>
-        <li>VIP support</li>
-        <li>API access</li>
-    </section>
-    <footer class="box-footer">
-        <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
-    </footer>
-  </article> 
-</section>
+    <article class="box box-pricing box-enterprise">
+      <header class="box-header">
+        <h3 class="box-header-heading h4">
+          Pro
+        </h3>
+        <strong class="b">$299/year</strong>
+        <h6 class="box-header-subheading">for marketers, small biz, and e-commerce</h6>
+      </header>
+      <section class="box-body">
+        All the goodness of Basic
+        <ul>
+          <li>Unlimited leads</li>
+          <li>Unlimited Faceboox likes</li>
+          <li>Unlimited offer links</li>
+          <li>Add your own lead form</li>
+          <li>Export leads and data</li>
+          <li>Reduced Qzzr branding</li>
+          <li>Customize share text</li>
+          <li>Customized CTA's</li>
+          <li>Unlisted quizzes</li>
+        </ul>
+      </section>
+      <footer class="box-footer">
+          <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
+      </footer>
+    </article> 
+  </section>
 
-<section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
-  <article class="box box-pricing box-enterprise">
-    <header class="box-header">
-      <h3 class="box-header-heading h4">
-        Enterprise plan
-      </h3>
-      <strong class="b"></strong>
-      <h6 class="box-header-subheading">Custom quotes</h6>
-    </header>
-    <section class="box-body">
-      <ul>
-        <li>White Label</li>
-        <li>Multiple accounts</li>
-        <li>VIP support</li>
-        <li>API access</li>
-      </ul>
-    </section>
-    <footer class="box-footer">
+  <section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
+    <article class="box box-pricing box-enterprise">
+      <header class="box-header">
+        <h3 class="box-header-heading h4">
+          Enterprise plan
+        </h3>
+        <strong class="b"></strong>
+        <h6 class="box-header-subheading">Custom quotes</h6>
+      </header>
+      <section class="box-body">
+        All the goodness of Pro
+        <ul>
+          <li>White Label</li>
+          <li>Multiple accounts</li>
+          <li>Multiple brand support</li>
+          <li>VIP support and strategy</li>
+        </ul>
+      </section>
+      <footer class="box-footer">
         <a href="mailto:sales@qzzr.com?subject=Qzzr Enterprise..." class="button"></a>
-    </footer>
-  </article> 
-</section>
+      </footer>
+    </article> 
+  </section>
 </section>
 
 
