--- a/pricing/index.html
+++ b/pricing/index.html
@@ -174,18 +174,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="page-wrapper">
   <section class="hero hero-pricing">
     <section class="hero-content">
-        <h1 class="hero-heading h1 red-color">
-          Simple tool,<br>powerful results.
-        </h1>
+      <h1 class="hero-heading h1 red-color">
+        Simple tool,<br>powerful results.
+      </h1>
       <section class="hero-blurb">
         <h4 class="h5">
-          Upgrade, downgrade, or cancel at any time
+          Publish your first awesome quiz and share it with the world today!
         </h4>
       </section>
     </section>
 
-    <section class="hero-media">
-    </section>
   </section>
 
 
@@ -202,18 +200,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </header>
     <section class="box-body">
       <ul>
-        <li class="list-item"><strong class="b">Unlimited</strong> quizzes</li>
-        <li class="list-item"><strong class="b">Unlimited</strong> responses</li>
-        <li class="list-item"><strong class="b">Unlimited</strong> questions</li>
-        <li class="list-item"><strong class="b">Unlimited</strong> shares</li>
-        <li class="list-item">All quiz types</li>
+        <li class="list-item">Unlimited quizzes</li>
+        <li class="list-item">Unlimited completions</li>
+        <li class="list-item">Unlimited shares</li>
         <li class="list-item">Multimedia content</li>
-        <li class="list-item">Embed anywhere</li>
-        <li class="list-item">Beautiful on any device</li>
         <li class="list-item">Custom themes &amp; colors</li>
-        <li class="list-item">Quiz level analytics</li>
-        <li class="list-item">Basic quiz logic</li>
-        <li class="list-item">Community support</li>
+        <li class="list-item">Full analytics</li>
       </ul>
     </section>
     <footer class="box-footer">
@@ -233,15 +225,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <section class="box-body">
         All the goodness of Basic
         <ul>
-          <li>Unlimited leads</li>
-          <li>Unlimited Faceboox likes</li>
-          <li>Unlimited offer links</li>
-          <li>Add your own lead form</li>
-          <li>Export leads and data</li>
-          <li>Reduced Qzzr branding</li>
-          <li>Customize share text</li>
-          <li>Customized CTA's</li>
-          <li>Unlisted quizzes</li>
+          <li class="list-item">Unlimited leads</li>
+          <li class="list-item">Unlimited Faceboox likes</li>
+          <li class="list-item">Unlimited offer links</li>
+          <li class="list-item">Add your own lead form</li>
+          <li class="list-item">Export leads and data</li>
+          <li class="list-item">Reduced Qzzr branding</li>
+          <li class="list-item">Customize share text</li>
+          <li class="list-item">Customized CTA's</li>
+          <li class="list-item">Unlisted quizzes</li>
         </ul>
       </section>
       <footer class="box-footer">
@@ -254,7 +246,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <article class="box box-pricing box-enterprise">
       <header class="box-header">
         <h3 class="box-header-heading h4">
-          Enterprise plan
+          Enterprise
         </h3>
         <strong class="b"></strong>
         <h6 class="box-header-subheading">Custom quotes</h6>
@@ -262,10 +254,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <section class="box-body">
         All the goodness of Pro
         <ul>
-          <li>White Label</li>
-          <li>Multiple accounts</li>
-          <li>Multiple brand support</li>
-          <li>VIP support and strategy</li>
+          <li class="list-item">White Label</li>
+          <li class="list-item">Multiple accounts</li>
+          <li class="list-item">Multiple brand support</li>
+          <li class="list-item">VIP support and strategy</li>
         </ul>
       </section>
       <footer class="box-footer">
