--- a/pricing/index.html
+++ b/pricing/index.html
@@ -175,7 +175,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <section class="hero hero-pricing">
     <section class="hero-content">
       <h1 class="hero-heading h1 red-color">
-        Simple tool,<br>powerful results.
+        Simple tool, powerful results.
       </h1>
       <section class="hero-blurb">
         <h4 class="h5">
@@ -211,62 +211,61 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <footer class="box-footer">
       <a href="http://app.qzzr.com/account/signup" class="button">Get started</a>
     </footer>
-  </article> 
-
-  <section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
-    <article class="box box-pricing box-enterprise">
-      <header class="box-header">
-        <h3 class="box-header-heading h4">
-          Pro
-        </h3>
-        <strong class="b">$299/year</strong>
-        <h6 class="box-header-subheading">for marketers, small biz, and e-commerce</h6>
-      </header>
-      <section class="box-body">
-        All the goodness of Basic
-        <ul>
-          <li class="list-item">Unlimited leads</li>
-          <li class="list-item">Unlimited Faceboox likes</li>
-          <li class="list-item">Unlimited offer links</li>
-          <li class="list-item">Add your own lead form</li>
-          <li class="list-item">Export leads and data</li>
-          <li class="list-item">Reduced Qzzr branding</li>
-          <li class="list-item">Customize share text</li>
-          <li class="list-item">Customized CTA's</li>
-          <li class="list-item">Unlisted quizzes</li>
-        </ul>
-      </section>
-      <footer class="box-footer">
-          <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
-      </footer>
-    </article> 
-  </section>
-
-  <section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
-    <article class="box box-pricing box-enterprise">
-      <header class="box-header">
-        <h3 class="box-header-heading h4">
-          Enterprise
-        </h3>
-        <strong class="b"></strong>
-        <h6 class="box-header-subheading">Custom quotes</h6>
-      </header>
-      <section class="box-body">
-        All the goodness of Pro
-        <ul>
-          <li class="list-item">White Label</li>
-          <li class="list-item">Multiple accounts</li>
-          <li class="list-item">Multiple brand support</li>
-          <li class="list-item">VIP support and strategy</li>
-        </ul>
-      </section>
-      <footer class="box-footer">
-        <a href="mailto:sales@qzzr.com?subject=Qzzr Enterprise..." class="button"></a>
-      </footer>
-    </article> 
-  </section>
+  </article>
 </section>
 
+<section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
+  <article class="box box-pricing box-enterprise">
+    <header class="box-header">
+      <h3 class="box-header-heading h4">
+        Pro
+      </h3>
+      <strong class="b">$299/year</strong>
+      <h6 class="box-header-subheading">for marketers, small biz, and e-commerce</h6>
+    </header>
+    <section class="box-body">
+      All the goodness of Basic
+      <ul>
+        <li class="list-item">Unlimited leads</li>
+        <li class="list-item">Unlimited Faceboox likes</li>
+        <li class="list-item">Unlimited offer links</li>
+        <li class="list-item">Add your own lead form</li>
+        <li class="list-item">Export leads and data</li>
+        <li class="list-item">Reduced Qzzr branding</li>
+        <li class="list-item">Customize share text</li>
+        <li class="list-item">Customized CTA's</li>
+        <li class="list-item">Unlisted quizzes</li>
+      </ul>
+    </section>
+    <footer class="box-footer">
+        <a href="http://app.qzzr.com/account/signup_pro/58" class="button">Get started</a>
+    </footer>
+  </article> 
+</section>
+
+<section class="col-3 col-wxxl-6 col-wm-10 col-wm-offset-1 col-ws-12 col-ws-offset-0 mb4">
+  <article class="box box-pricing box-enterprise">
+    <header class="box-header">
+      <h3 class="box-header-heading h4">
+        Enterprise
+      </h3>
+      <strong class="b"></strong>
+      <h6 class="box-header-subheading">Custom quotes</h6>
+    </header>
+    <section class="box-body">
+      All the goodness of Pro
+      <ul>
+        <li class="list-item">White Label</li>
+        <li class="list-item">Multiple accounts</li>
+        <li class="list-item">Multiple brand support</li>
+        <li class="list-item">VIP support and strategy</li>
+      </ul>
+    </section>
+    <footer class="box-footer">
+      <a href="mailto:sales@qzzr.com?subject=Qzzr Enterprise..." class="button">Request info</a>
+    </footer>
+  </article> 
+</section>
 
   </div>
 
