--- a/pricing/index.html
+++ b/pricing/index.html
@@ -155,7 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="nav-bar-actions">
     <nav class="nav-bar-action">
-      <a href="https://app.qzzr.com/new" class="button button-primary button-with-label tooltip tooltip-primary mr2" data-tooltip="It's free">
+      <a href="https://app.qzzr.com/new" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
         <i class="icon icon-ss-compose"></i>
         <span class="inline-block">
           <span class="button-label wxl-none">Create a quiz</span>
