style adjustments to pricing

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -216,7 +216,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h6 class="box-header-subheading">for marketers, small biz, and e-commerce</h6>
       </header>
       <section class="box-body">
-        All the goodness of Basic
+        <span class="opacity-5">All the goodness of Basic</span>
         <ul>
           <li class="list-item">Unlimited leads</li>
           <li class="list-item">Unlimited Facebook likes</li>
@@ -243,7 +243,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h6 class="box-header-subheading">for marketers, small biz, and e-commerce</h6>
       </header>
       <section class="box-body">
-        All the goodness of Basic
+        <span class="opacity-5">All the goodness of Basic</span>
         <ul>
           <li class="list-item">Unlimited leads</li>
           <li class="list-item">Unlimited Facebook likes</li>
@@ -269,11 +269,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="box-header-heading h4">
         Enterprise
       </h3>
-      <strong class="b"></strong>
-      <h6 class="box-header-subheading">Custom quotes</h6>
+      <strong class="b">Custom plans</strong>
+      <h6 class="box-header-subheading">for agencies, brands, and publishers</h6>
     </header>
     <section class="box-body">
-      All the goodness of Pro
+      <span class="opacity-5">All the goodness of Pro</span>
       <ul>
         <li class="list-item">White Label</li>
         <li class="list-item">Multiple accounts</li>
