--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 
 <div class="page-wrapper text-center pt5">
-  <a href="https://app.qzzr.com/account/signup" class="button button-large h6 b button-outline button-primary">
+  <a href="/pricing/" class="button button-large h6 b button-outline button-primary">
     <span class="button-label pt3" style="display: block;">Get started now</span>
     <span class="h8-cap opacity-5 h mbn mtn">It's free</span>
   </a>
