re fixed the Avatar URLS

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <a class="figure-image" href="/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
+                <a class="figure-image" href="/quiz/sci-fi-fantasy-author-or-crazy-person/fi9xdWl6emVzLzEwNTI0" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/0b/2b47f0dc7f11e39c356f9cd1495f31/photo.png);">
                 </a>
               </span>
               <a name="user"href="/user/college-humor/fi9wcm9maWxlcy8xMDMw" class="ellipsis quiz-thumbnail-author">
@@ -270,7 +270,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <a class="figure-image" href="/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
+                <a class="figure-image" href="/quiz/which-bible-figure-are-you/fi9xdWl6emVzLzUxNDY" style="background-image: url(https://d27v936kxrwe69.cloudfront.net/transloadit/67/c77180d6dc11e397358dce89d68f3b/563376_10150990921581530_836479439_n.jpg);">
                 </a>
               </span>
               <a name="user"href="/user/crosswalk-com/fi9wcm9maWxlcy81MjA" class="ellipsis quiz-thumbnail-author">
@@ -289,7 +289,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <span class="event-card-body">
             <span class="event-card-heading single-line">
               <span class="figure figure-avatar figure-24 mr1">
-                <a class="figure-image" href="/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-19606.png);">
+                <a class="figure-image" href="/quiz/can-you-pass-the-u-s-citizenship-test/fi9xdWl6emVzLzUyMzU" style="background-image: url(https://d2dc3vxsq2sloe.cloudfront.net/v1-270.png);">
                 </a>
               </span>
               <a name="user"href="/user/jfur/fi9wcm9maWxlcy8yNzA" class="ellipsis quiz-thumbnail-author">
