linking offer types to pages

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -218,10 +218,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <section class="box-body">
         <span class="opacity-5">All the goodness of Basic</span>
         <ul>
-          <li class="list-item">Unlimited leads</li>
-          <li class="list-item">Unlimited Facebook likes</li>
-          <li class="list-item">Unlimited offer links</li>
-          <li class="list-item">Add your own lead form</li>
+          <li class="list-item"><a href="/generate-qualified-leads/">Unlimited leads</a></li>
+          <li class="list-item"><a href="/drive-social-traffic/">Unlimited Facebook likes</a></li>
+          <li class="list-item"><a href="/present-targeted-offers/">Unlimited offer links</a></li>
           <li class="list-item">Export leads and data</li>
           <li class="list-item">Reduced Qzzr branding</li>
           <li class="list-item">Customize share text</li>
