adding tooltips, though they are jacked

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -218,9 +218,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <section class="box-body">
         <span class="opacity-5">All the goodness of Basic</span>
         <ul>
-          <li class="list-item"><a href="/generate-qualified-leads/">Unlimited leads</a></li>
-          <li class="list-item"><a href="/drive-social-traffic/">Unlimited Facebook likes</a></li>
-          <li class="list-item"><a href="/present-targeted-offers/">Unlimited offer links</a></li>
+          <li class="list-item">
+            <a href="/generate-qualified-leads/">
+              Unlimited leads
+              <span class="tooltip-top tooltip-long help-icon" data-tooltip="You can add a lead form and custom text before or after the results page of your quiz.">
+                <i class="icon-ss-info icon"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-item">
+            <a href="/drive-social-traffic/">
+              Unlimited Facebook likes
+              <span class="tooltip-top tooltip-long help-icon" data-tooltip="Shares via our social media buttons link back to your site."><i class="icon-ss-info icon"></i></span>
+            </a>
+          </li>
+          <li class="list-item">
+            <a href="/present-targeted-offers/">
+              Unlimited offer links
+              <span class="tooltip-top tooltip-long help-icon" data-tooltip="Present an offer at the end of your quiz to send people to another site or page."><i class="icon-ss-info icon"></i></span>
+            </a>
+          </li>
           <li class="list-item">Export leads and data</li>
           <li class="list-item">Reduced Qzzr branding</li>
           <li class="list-item">Customize share text</li>
