--- a/pricing/index.html
+++ b/pricing/index.html
@@ -221,7 +221,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <li class="list-item">
             <a href="/generate-qualified-leads/">
               Unlimited leads
-              <span class="tooltip-top tooltip-long help-icon" data-tooltip="You can add a lead form and custom text before or after the results page of your quiz.">
+              <span class="tooltip tooltip-long help-icon" data-tooltip="You can add a lead form and custom text before or after the results page of your quiz.">
                 <i class="icon-ss-info icon"></i>
               </span>
             </a>
@@ -229,13 +229,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <li class="list-item">
             <a href="/drive-social-traffic/">
               Unlimited Facebook likes
-              <span class="tooltip-top tooltip-long help-icon" data-tooltip="Shares via our social media buttons link back to your site."><i class="icon-ss-info icon"></i></span>
+              <span class="tooltip tooltip-long help-icon" data-tooltip="Shares via our social media buttons link back to your site."><i class="icon-ss-info icon"></i></span>
             </a>
           </li>
           <li class="list-item">
             <a href="/present-targeted-offers/">
               Unlimited offer links
-              <span class="tooltip-top tooltip-long help-icon" data-tooltip="Present an offer at the end of your quiz to send people to another site or page."><i class="icon-ss-info icon"></i></span>
+              <span class="tooltip tooltip-long help-icon" data-tooltip="Present an offer at the end of your quiz to send people to another site or page."><i class="icon-ss-info icon"></i></span>
             </a>
           </li>
           <li class="list-item">Export leads and data</li>
